<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account_details"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="16dp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/white"
            android:layout_marginBottom="24dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/full_name"
            android:textColor="@color/black"
            android:layout_marginBottom="8dp"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/tvAccName"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/account_field_bg"
            android:gravity="center_vertical"
            android:paddingStart="16dp"
            android:text="@string/hardcoded_name"
            android:textColor="@color/black"
            android:layout_marginBottom="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textColor="@color/black"
            android:layout_marginBottom="8dp"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/tvAccEmail"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/account_field_bg"
            android:gravity="center_vertical"
            android:paddingStart="16dp"
            android:text="@string/hardcoded_email"
            android:textColor="@color/black"
            android:layout_marginBottom="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_of_birth"
            android:textColor="@color/black"
            android:layout_marginBottom="8dp"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/tvAccDob"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/account_field_bg"
            android:gravity="center_vertical"
            android:paddingStart="16dp"
            android:text="@string/hardcoded_dob"
            android:textColor="@color/black"
            android:layout_marginBottom="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender"
            android:textColor="@color/black"
            android:layout_marginBottom="8dp"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/tvAccGender"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/account_field_bg"
            android:gravity="center_vertical"
            android:paddingStart="16dp"
            android:text="@string/hardcoded_gender"
            android:textColor="@color/black"
            android:layout_marginBottom="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone_number"
            android:textColor="@color/black"
            android:layout_marginBottom="8dp"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/tvAccPhone"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/account_field_bg"
            android:gravity="center_vertical"
            android:paddingStart="16dp"
            android:drawablePadding="12dp"
            android:text="@string/hardcoded_phone"
            android:textColor="@color/black"
            android:layout_marginBottom="40dp"/>
        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:id="@+id/btnLogout"
            android:text="@string/logout"
            app:cornerRadius="12dp"
            android:backgroundTint="@color/black"
            android:layout_marginBottom="20dp"
            />

    </LinearLayout>
</ScrollView>